Lots of code... clean this up later.

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -5,8 +5,9 @@
 FROM nginx
 MAINTAINER skriptble <kris.brandow@gmail.com>
 
-# ADD nginx.conf /etc/nginx.conf
+ADD nginx.conf /etc/nginx.conf
 # COPY app /app
 # ADD authentication-site.conf /etc/nginx/sites-enabled/authentication-site.conf
+ADD static-site.conf /etc/nginx/sites-enabled/static-site.conf
 
 EXPOSE 80
