--- a/docker-host/Vagrantfile
+++ b/docker-host/Vagrantfile
@@ -1,25 +1,14 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 Vagrant.configure("2") do |config|
-  config.vm.box = "mitchellh/boot2docker"
+    config.vm.box = "precise64"
+    config.vm.provision "docker"
+    config.vm.provision "shell", inline:
+        "ps aux | grep 'sshd:' | awk '{print $2}' | xargs kill"
 
-  config.vm.provider "virtualbox" do |v|
-    # On VirtualBox, we don't have guest additions or a functional vboxsf
-    # in TinyCore Linux, so tell Vagrant that so it can be smarter.
-    v.check_guest_additions = false
-    v.functional_vboxsf     = false
-  end
-
-  ["vmware_fusion", "vmware_workstation"].each do |vmware|
-    config.vm.provider vmware do |v|
-      if v.respond_to?(:functional_hgfs=)
-        v.functional_hgfs = false
-      end
-    end
-  end
-
-  config.vm.network "forwarded_port", guest: 80, host: 1234
-
-  # b2d doesn't support NFS
-  config.nfs.functional = false
+    # Add shared folder
+    config.vm.synced_folder "../", "/app"
+    # Add private network
+    # Add port forwarding
+    config.vm.network "forwarded_port", guest: 80, host: 1234
 end
