--- a/nginx-php/default.conf
+++ b/nginx-php/default.conf
@@ -73,7 +73,7 @@ server {
 
 server {
     server_name authenticate.dev;
-    root /src/symfony/web;
+    root /app/web;
 
     location / {
         # try to serve file directly, fallback to app.php
