--- a/nginx-php/supervisord.conf
+++ b/nginx-php/supervisord.conf
@@ -5,4 +5,4 @@ nodaemon=true
 command=/usr/sbin/nginx
 
 [program:php5-fpm]
-command=/usr/sbin/php5-fpm -y /etc/php5/fpm/php-fpm.conf -c /etc/php5/fpm/php.ini -F
+command=/usr/sbin/php5-fpm --allow-to-run-as-root -y /etc/php5/fpm/php-fpm.conf -c /etc/php5/fpm/php.ini -F
