Updating vagrant files.

--- a/docker-host/Vagrantfile
+++ b/docker-host/Vagrantfile
@@ -9,6 +9,7 @@ Vagrant.configure("2") do |config|
     # Add shared folder
     config.vm.synced_folder "../", "/app"
     # Add private network
+    config.vm.network "private_network", ip: "192.168.44.10"
     # Add port forwarding
     config.vm.network "forwarded_port", guest: 80, host: 1234
 end
