--- a/nginx/authentication-site.conf
+++ b/nginx/authentication-site.conf
@@ -1,19 +1,20 @@
 # /etc/nginx/sites-available/authenticate
 server {
+    listen 80;
     server_name authenticate.dev;
-    root /app/web;
 
     location / {
+        root /app/web;
         # try to serve file directly, fallback to app.php
         try_files $uri /app.php$is_args$args;
     }
 
     location ~ ^/(app|app_dev|config)\.php(/|$) {
+        root /app/web;
         fastcgi_pass php-fpm.docker:9000;
-        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        fastcgi_index app.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param HTTPS off;
     }
 
     # error_log /var/log/nginx/project_error.log;
